<resources>
  <string name="app_name">GotAuto</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>
  <string name="detailed_search">Detailed Search</string>
  <string name="submit_search">Search</string>
  <string name="maker">Maker, Model</string>
  <string name="fuel_type">Fuel Type</string>
  <string name="body_type">Body Type</string>
  <string name="price">Price €</string>
  <string name="year">Year</string>
  <string name="gearBox">Gearbox</string>
  <string name="doorCount">Doors</string>
  <string name="displacement">Displacement l</string>
  <string name="steeringWheel">Steering Wheel</string>
  <string name="defects">Defects</string>
  <string name="odometer">Odometer</string>
  <string name="power">Power(KW)</string>
  <string name="drivingWheels">Driving wheels</string>
  <string name="seating">Seating</string>
  <string name="fuelConsumption">Consumption 100/l</string>
  <string name="euroStandard">Euro Standard</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="title_activity_advert_listing">AdvertListingActivity</string>

</resources>
