<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:isScrollContainer="true">


  <TextView
    android:id="@+id/makerTextView"
    android:layout_width="100dp"
    android:layout_height="45dp"
    android:text="@string/maker"
    android:textAlignment="center"
    android:gravity="center"
    android:layout_centerVertical="true"
    android:layout_alignParentLeft="true"
    android:background="@drawable/white_textview"
    android:layout_centerInParent="true"
    android:clickable="true"
    android:layout_above="@+id/fuelTypeTextView"/>

  <Button
    android:id="@+id/makerButton"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:layout_centerVertical="true"
    android:layout_marginStart="100dp"
    android:background="@drawable/white_button"
    android:layout_marginLeft="100dp"
    android:layout_above="@+id/fuelTypeButton"/>
  <Button
    android:id="@+id/fuelTypeButton"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:layout_centerVertical="true"
    android:layout_marginStart="100dp"
    android:background="@drawable/white_button"
    android:layout_marginLeft="100dp"
    android:clickable="true"
    android:layout_above="@+id/bodyTypeButton"/>
  <TextView
    android:id="@+id/fuelTypeTextView"
    android:layout_width="100dp"
    android:layout_height="45dp"
    android:text="@string/fuel_type"
    android:textAlignment="center"
    android:gravity="center"
    android:layout_centerVertical="true"
    android:layout_alignParentLeft="true"
    android:background="@drawable/white_textview"
    android:layout_centerInParent="true"
    android:clickable="true"
    android:layout_above="@+id/bodyTypeTextView"/>

  <TextView
    android:id="@+id/bodyTypeTextView"
    android:layout_width="100dp"
    android:layout_height="45dp"
    android:text="@string/body_type"
    android:textAlignment="center"
    android:gravity="center"
    android:layout_centerVertical="true"
    android:layout_alignParentLeft="true"
    android:background="@drawable/white_textview"
    android:layout_centerInParent="true"
    android:clickable="true"/>
  <Button
    android:id="@+id/bodyTypeButton"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:layout_centerVertical="true"
    android:layout_marginStart="100dp"
    android:background="@drawable/white_button"
    android:layout_marginLeft="100dp"/>
  <TextView
    android:id="@+id/priceTextView"
    android:layout_width="100dp"
    android:layout_height="45dp"
    android:text="@string/price"
    android:textAlignment="center"
    android:gravity="center"
    android:layout_centerVertical="true"
    android:layout_alignParentLeft="true"
    android:background="@drawable/white_textview"
    android:layout_centerInParent="true"
    android:clickable="true"
    android:layout_below="@+id/bodyTypeTextView"/>
  <Button
    android:id="@+id/priceButton"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:layout_centerVertical="true"
    android:layout_marginStart="100dp"
    android:background="@drawable/white_button"
    android:layout_marginLeft="100dp"
    android:layout_below="@+id/bodyTypeTextView"
    android:saveEnabled="true"/>
  <TextView
    android:id="@+id/yearTextView"
    android:layout_width="100dp"
    android:layout_height="45dp"
    android:text="@string/year"
    android:textAlignment="center"
    android:gravity="center"
    android:layout_centerVertical="true"
    android:layout_alignParentLeft="true"
    android:background="@drawable/white_textview"
    android:layout_centerInParent="true"
    android:clickable="true"
    android:layout_below="@+id/priceTextView"/>
  <Button
    android:id="@+id/yearButton"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:layout_centerVertical="true"
    android:layout_marginStart="100dp"
    android:background="@drawable/white_button"
    android:layout_marginLeft="100dp"
    android:layout_below="@+id/priceButton"
    android:saveEnabled="true"/>



  <Button
    android:id="@+id/searchButton"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginLeft="280dp"
    android:layout_below="@+id/yearTextView"
    android:text="@string/submit_search"/>
  <Button
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginRight="250dp"
    android:layout_below="@+id/yearTextView"
    android:textSize="13dp"
    android:text="@string/detailed_search"/>

  <FrameLayout
    android:id="@+id/fragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    >
  </FrameLayout>

</RelativeLayout>